server/compilers/goLiteJS/src/test/ml1/invalid/slice3.go
// append without first argument
package main

var x []int

func main(){
    x = append(1)
}
